syntax = "proto3";

option csharp_namespace = "MediaRegister_WPF.Services";

package media;

service Media {
	rpc GetBook (GetBookRequest) returns (GetBookResponse);
	rpc GetBooks (GetBooksRequest) returns (stream GetBookResponse);
	rpc PostBook (PostBookRequest) returns (PostBookResponse);
	rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
	rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);

	rpc GetMovie (GetMovieRequest) returns (GetMovieResponse);
	rpc GetMovies (GetMoviesRequest) returns (stream GetMovieResponse);
	rpc PostMovie (PostMovieRequest) returns (PostMovieResponse); 
	rpc UpdateMovie (UpdateMovieRequest) returns (UpdateMovieResponse);
	rpc DeleteMovie (DeleteMovieRequest) returns (DeleteMovieResponse);
}


message GetBookRequest {
	int32 id = 1;
}

message GetBookResponse {
	int32 id = 1;
	string title = 2;
	string author = 3;
	int32 pages = 4;
}

message GetBooksRequest {
}

message GetBooksResponse {
	repeated GetBookResponse books = 1;
}

message PostBookRequest {
	string title = 1;
	string author = 2;
	int32 pages = 3;
}

message PostBookResponse {
	int32 id = 1;
}

message UpdateBookRequest {
	int32 id = 1;
	string title = 2;
	string author = 3;
	int32 pages = 4;
}

message UpdateBookResponse {
	int32 id = 1;
}

message DeleteBookRequest {
	int32 id = 1;
}

message DeleteBookResponse { 
}

message GetMovieRequest {
	int32 id = 1;
}

message GetMovieResponse {
	int32 id = 1;
	string title = 2;
	string director = 3;
	int32 length = 4;
}

message GetMoviesRequest {
}

message GetMoviesResponse {
	repeated GetMovieResponse movies = 1;
}

message PostMovieRequest {
	string title = 1;
	string director = 2;
	int32 length = 3;
}

message PostMovieResponse {
	int32 id = 1;
}

message UpdateMovieRequest {
	int32 id = 1;
	string title = 2;
	string director = 3;
	int32 length = 4;
}

message UpdateMovieResponse {
	int32 id = 1;
}

message DeleteMovieRequest {
	int32 id = 1;
}

message DeleteMovieResponse {
}
